--- a/doc/default.yaml
+++ b/doc/default.yaml
@@ -8,14 +8,23 @@ envelope:
   per_orbital_exponent: true
   spin_restricted: false
   init_to_ones: true
+  softplus_zeta: false
 backflow_op:
   _target_: deepqmc.wf.nn_wave_function.nn_wave_function.BackflowOp
   _partial_: true
   mult_act: '${eval:"lambda x: x"}'
 n_determinants: 16
 full_determinant: true
-cusp_electrons: true
-cusp_alpha: 10
+cusp_electrons:
+  _target_: deepqmc.wf.nn_wave_function.cusp.ElectronicCuspAsymptotic
+  _partial_: true
+  same_scale: 0.25
+  anti_scale: 0.5
+  alpha: 10.0
+  trainable_alpha: false
+  cusp_function:
+    _target_: deepqmc.wf.nn_wave_function.cusp.DeepQMCCusp
+cusp_nuclei: false
 backflow_transform: mult
 conf_coeff:
   _target_: haiku.Linear
@@ -55,15 +64,21 @@ omni_factory:
     _target_: deepqmc.gnn.ElectronGNN
     _partial_: true
     n_interactions: 3
-    positional_electron_embeddings:
-      ne:
-        _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
-        - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
-          powers: [1]
-        - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
-    atom_type_embeddings: true
+    nuclei_embedding: null
+    electron_embedding:
+      _target_: deepqmc.gnn.electron_gnn.ElectronEmbedding
+      _partial_: true
+      positional_embeddings:
+        ne:
+          _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
+          edge_features:
+          - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
+            powers: [1]
+          - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
+      use_spin: false
+      project_to_embedding_dim: false
     two_particle_stream_dim: 32
+    self_interaction: false
     edge_types:
     - same
     - anti
@@ -104,7 +119,10 @@ omni_factory:
             _target_: jax.numpy.tanh
             _partial_: true
           init: default
-      residual:
+      one_particle_residual:
+        _target_: deepqmc.hkext.ResidualConnection
+        normalize: true
+      two_particle_residual:
         _target_: deepqmc.hkext.ResidualConnection
         normalize: true
       deep_features: shared
