rename CombinedEdgeFeatures.edge_features to avoid confusion in config file

--- a/src/deepqmc/conf/ansatz/deeperwin.yaml
+++ b/src/deepqmc/conf/ansatz/deeperwin.yaml
@@ -55,7 +55,7 @@ omni_factory:
       positional_embeddings:
         ne:
           _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-          edge_features:
+          features:
           - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
             powers: [1]
           - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
@@ -66,7 +66,7 @@ omni_factory:
     edge_features:
       ne:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
