--- a/src/deepqmc/conf/ansatz/default.yaml
+++ b/src/deepqmc/conf/ansatz/default.yaml
@@ -71,7 +71,7 @@ omni_factory:
       positional_embeddings:
         ne:
           _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-          edge_features:
+          features:
           - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
             powers: [1]
           - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
@@ -82,13 +82,13 @@ omni_factory:
     edge_features:
       same:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       anti:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
