--- a/src/deepqmc/conf/ansatz/ferminet.yaml
+++ b/src/deepqmc/conf/ansatz/ferminet.yaml
@@ -47,7 +47,7 @@ omni_factory:
       positional_embeddings:
         ne:
           _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-          edge_features:
+          features:
           - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
             powers: [1]
           - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
@@ -59,13 +59,13 @@ omni_factory:
     edge_features:
       up:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       down:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
