update test configs ansatz.yaml and gnn.yaml

--- a/tests/conf/ansatz.yaml
+++ b/tests/conf/ansatz.yaml
@@ -84,19 +84,19 @@ omni_factory:
     edge_features:
       same:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       anti:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
       ne:
         _target_: deepqmc.gnn.edge_features.CombinedEdgeFeature
-        edge_features:
+        features:
         - _target_: deepqmc.gnn.edge_features.DistancePowerEdgeFeature
           powers: [1]
         - _target_: deepqmc.gnn.edge_features.DifferenceEdgeFeature
