--- a/src/deepqmc/conf/task/opt/kfac_psiformer.yaml
+++ b/src/deepqmc/conf/task/opt/kfac_psiformer.yaml
@@ -8,3 +8,6 @@ norm_constraint: 0.001
 damping_schedule:
   _target_: deepqmc.utils.ConstantSchedule
   value: 0.001
+estimation_mode: fisher_exact
+num_burnin_steps: 0
+inverse_update_period: 1
