create wrapper classes for optimizers in optimizer.py

--- a/src/deepqmc/conf/task/opt/adamw.yaml
+++ b/src/deepqmc/conf/task/opt/adamw.yaml
@@ -1,3 +1,6 @@
-_target_: optax.adamw
-learning_rate: 0.001
-b2: 0.9
+_target_: deepqmc.optimizer.OptaxOptimizer
+_partial_: true
+optax_opt:
+  _target_: optax.adamw
+  learning_rate: 0.001
+  b2: 0.9
