--- a/src/deepqmc/conf/task/sampler/resampled_decorr_metropolis.yaml
+++ b/src/deepqmc/conf/task/sampler/resampled_decorr_metropolis.yaml
@@ -1,5 +1,5 @@
 - _target_: deepqmc.sampling.ResampledSampler
-  treshold: 0.95
+  threshold: 0.95
 - _target_: deepqmc.sampling.DecorrSampler
   length: 20
 - _target_: deepqmc.sampling.MetropolisSampler
