add library stub dependencies to mypy workflow

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -61,7 +61,7 @@ jobs:
         with:
           python-version: 3.x
       - name: Install dependencies
-        run: pip install mypy
+        run: pip install mypy types-PyYAML types-toml
       - uses: actions/checkout@v2
       - run: mypy --ignore-missing-imports src
   codespell:
