--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.x
+          python-version: 3.11
       - name: Install dependencies
         run: pip install 'flake8' flake8-bugbear flake8-comprehensions flake8-quotes pep8-naming
       - uses: actions/checkout@v2
