restrict jax version to avoid kfac issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,8 @@ dependencies = [
     'dm-haiku>0.0.9',
     'h5py',
     'hydra-core',
-    'jax',
-    'jaxlib',
+    'jax<0.4.24',
+    'jaxlib<0.4.24',
     'jax-dataclasses',
     'kfac-jax',
     'optax',
