--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,6 @@ where = ["src"]
 "*" = ["*.yaml"]
 
 [tool.black]
-target-version = ['py37']
+target-version = ['py39','py310']
 skip-string-normalization = true
 preview = true
